[package]
name = "ulp-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
rayon = "1.10"
regex = "1.10"
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
